[package]
workspace = ".."
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nerdschloss"
path = "src/main.rs"

[dependencies]
hardware = {path = "../hardware"}
dotenvy = "0.15"
log = "0.4"
anyhow = "1"
thiserror = "1"
rust-embed = "6"
tokio = {version = "1", features = ["full", "tracing"]}
poem = {version = "1", features = ["static-files", "anyhow", "embed"]}
reqwest = {version = "0.11", default_features = false}
