[package]
workspace = ".."
name = "backend"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "nerdschloss"
path = "src/main.rs"

[build-dependencies]
shadow-rs = "0.38"

[dev-dependencies]
pretty_assertions = "1"

[dependencies]
hardware = { path = "../hardware" }
clap = { version = "4", features = ["derive", "cargo", "env", "unicode"] }
clap-verbosity-flag = "3"
dotenvy = "0.15"
shadow-rs = "0.38"
config = { version = "0.15", default-features = false, features = ["toml"] }
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
tracing-oslog = "0.2"
tracing-journald = "0.3"
directories-next = "2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rust-embed = "8"
tokio = { version = "1", features = ["full", "tracing"] }
futures = "0.3"
poem = { version = "3", features = [
    "static-files",
    "anyhow",
    "embed",
    "tokio-metrics",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
reqwest-retry = "0.7"
reqwest-middleware = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
