[package]
workspace = ".."
name = "backend"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "nerdschloss"
path = "src/main.rs"

[build-dependencies]
shadow-rs = "1"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["rt", "macros"] }
fake = "4"
serde_json = "1"
secrecy = "0.10"
wiremock = "0.6"
rumqttd = "0.19"

[dependencies]
hardware = { path = "../hardware" }
clap = { version = "4", features = ["derive", "cargo", "env", "unicode"] }
clap-verbosity-flag = "3"
dotenvy = "0.15"
shadow-rs = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
tracing-oslog = "0.3"
tracing-journald = "0.3"
directories-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rust-embed = "8"
tokio = { version = "1", features = ["full", "tracing"] }
#tokio-util = "0.7"
futures = "0.3"
#futures-util = "0.3"
poem = { version = "3", features = [
    "static-files",
    "anyhow",
    "embed",
    "tokio-metrics",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
reqwest-retry = "0.7"
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-tracing = "0.5"
secrecy = { version = "0.10", features = ["serde"] }

# mattermost-rust-client = "4"

rumqttc = "0.24"
