[package]
workspace = "../"
name = "hardware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }

[target.'cfg(all(any(target_arch = "arm", target_arch = "aarch64"), target_env = "musl", target_os = "linux"))'.dependencies]
rppal = "0.19"
debounce = "0.2"

[target.'cfg(all(target_arch = "x86_64", any(target_os = "macos", target_os = "linux")))'.dependencies]
chrono = "0.4"
notify = { version = "6", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-full = { version = "0.3", default-features = false }
